--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>Blog Post</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/header.js" defer></script>
 </head>
